{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 572,
  "lineage": "435c5f3a-11e3-d53a-450d-ac39062066f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_intra_rt_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-064628aeb2d887f5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04460c159a248487b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064628aeb2d887f5a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:network-acl/acl-0c4034475f5184048",
            "default_network_acl_id": "acl-0c4034475f5184048",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c4034475f5184048",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "517716713836",
            "subnet_ids": [
              "subnet-022c9b7370e5a982f",
              "subnet-06fd740145bb26ee5",
              "subnet-0705e23525e6929f6",
              "subnet-07e30905b07b410f8",
              "subnet-083f6284a2556a80d",
              "subnet-0aedc5f12211e11a5",
              "subnet-0bfc30db75844494d",
              "subnet-0c2e9025f7780b7cc",
              "subnet-0e854eaf362dcf4ed"
            ],
            "tags": {
              "Name": "fargate-containers-default",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-default",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:route-table/rtb-0645a6080af3619b7",
            "default_route_table_id": "rtb-0645a6080af3619b7",
            "id": "rtb-0645a6080af3619b7",
            "owner_id": "517716713836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fargate-containers-default",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-default",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:security-group/sg-06411691b77e03d42",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06411691b77e03d42",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "517716713836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fargate-containers-default",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-default",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5e3d8421ed0c596",
            "association_id": "eipassoc-0fa0b0614dbbe7c14",
            "domain": "vpc",
            "id": "eipalloc-0a5e3d8421ed0c596",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0e861864c14add875",
            "private_dns": "ip-10-0-48-212.eu-west-2.compute.internal",
            "private_ip": "10.0.48.212",
            "public_dns": "ec2-13-40-231-48.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.231.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fargate-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:internet-gateway/igw-09ea6fcc1da166947",
            "id": "igw-09ea6fcc1da166947",
            "owner_id": "517716713836",
            "tags": {
              "Name": "fargate-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5e3d8421ed0c596",
            "association_id": "eipassoc-0fa0b0614dbbe7c14",
            "connectivity_type": "public",
            "id": "nat-04460c159a248487b",
            "network_interface_id": "eni-0e861864c14add875",
            "private_ip": "10.0.48.212",
            "public_ip": "13.40.231.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2e9025f7780b7cc",
            "tags": {
              "Name": "fargate-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01452751d2d000a0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04460c159a248487b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01452751d2d000a0b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09ea6fcc1da166947",
            "id": "r-rtb-02d9b89848d98d8ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d9b89848d98d8ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:route-table/rtb-064628aeb2d887f5a",
            "id": "rtb-064628aeb2d887f5a",
            "owner_id": "517716713836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04460c159a248487b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fargate-containers-intra",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-intra",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:route-table/rtb-01452751d2d000a0b",
            "id": "rtb-01452751d2d000a0b",
            "owner_id": "517716713836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04460c159a248487b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fargate-containers-private",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-private",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:route-table/rtb-02d9b89848d98d8ce",
            "id": "rtb-02d9b89848d98d8ce",
            "owner_id": "517716713836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ea6fcc1da166947",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fargate-containers-public",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-public",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddfd4c533f2ad94a",
            "route_table_id": "rtb-064628aeb2d887f5a",
            "subnet_id": "subnet-06fd740145bb26ee5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024ac231caae09464",
            "route_table_id": "rtb-064628aeb2d887f5a",
            "subnet_id": "subnet-0aedc5f12211e11a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d54e465148c35d5f",
            "route_table_id": "rtb-064628aeb2d887f5a",
            "subnet_id": "subnet-0bfc30db75844494d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5b067a45ea5a000",
            "route_table_id": "rtb-01452751d2d000a0b",
            "subnet_id": "subnet-0e854eaf362dcf4ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4b395b24583b824",
            "route_table_id": "rtb-01452751d2d000a0b",
            "subnet_id": "subnet-0705e23525e6929f6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be649cf7d26182dc",
            "route_table_id": "rtb-01452751d2d000a0b",
            "subnet_id": "subnet-022c9b7370e5a982f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034f1cfc44292e57b",
            "route_table_id": "rtb-02d9b89848d98d8ce",
            "subnet_id": "subnet-0c2e9025f7780b7cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099b6b025d94f39bb",
            "route_table_id": "rtb-02d9b89848d98d8ce",
            "subnet_id": "subnet-07e30905b07b410f8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aaa5171e3aa6f93",
            "route_table_id": "rtb-02d9b89848d98d8ce",
            "subnet_id": "subnet-083f6284a2556a80d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-06fd740145bb26ee5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fd740145bb26ee5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-intra-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-intra-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0aedc5f12211e11a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aedc5f12211e11a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-intra-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-intra-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0bfc30db75844494d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.54.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfc30db75844494d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-intra-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-intra-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0e854eaf362dcf4ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e854eaf362dcf4ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-private-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-private-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0705e23525e6929f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0705e23525e6929f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-private-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-private-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-022c9b7370e5a982f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022c9b7370e5a982f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-private-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-private-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0c2e9025f7780b7cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2e9025f7780b7cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-public-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-public-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-07e30905b07b410f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e30905b07b410f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-public-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-public-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-083f6284a2556a80d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083f6284a2556a80d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-containers-public-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers-public-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-07a2d4138cbefe987"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:vpc/vpc-07a2d4138cbefe987",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4034475f5184048",
            "default_route_table_id": "rtb-0645a6080af3619b7",
            "default_security_group_id": "sg-06411691b77e03d42",
            "dhcp_options_id": "dopt-2c35c445",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a2d4138cbefe987",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0645a6080af3619b7",
            "owner_id": "517716713836",
            "tags": {
              "Name": "fargate-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "fargate-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}